fix: Fixing unprotected routes
